# geo2mag

./: .gitignore  .travis.yml  Geo2mag.py  GeomagConvert.py  LICENSE.txt  README.md  README.rst  geo2mag.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_geo2mag.py
geo2mag/: __init__.py  geo2mag.py  geo2mag_coord.py  io.py  plots.py
igrfcoord/: __init__.py  base.py  io.py  plots.py  web.py
igrfcoord/tests/: test.kml  test.kmz  test_basic.py
test/: test.kml
tests/: example.kml  test.py  test_basic.py
