[metadata]
name = igrfcoord
version = 1.1.0
description = Convert geodetic <--> geomagnetic coordinates via IGRF web service.
author = Michael Hirsch, Ph.D.
author_email = scivision@users.noreply.github.com
url = https://github.com/space-physics/igrfcoord
keywords =
  geomagnetic
  igrf
  geospace
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Atmospheric Science
license_files =
  LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.6
include_package_data = True
packages = find:
install_requires =
  numpy
  requests
  pandas
  lxml

[options.extras_require]
tests =
  pytest
lint =
  flake8
  mypy
io =
  fastkml
plots =
  matplotlib
  cartopy
